# AI-Tutor

./: .env.example  .gitignore  Makefile  PRODUCTION_SETUP.md  README.md  SECURITY_FIXES_APPLIED.md  SECURITY_FIXES_SUMMARY.md  check_db.py  create_test_student.sql  docker-compose.yml  init_db.sql  insert_test_data.sql  pyproject.toml
app/: package-lock.json  package.json
app/src/: App.tsx  index.css
docs/: ARCHITECTURE_DIAGRAMS.md  EMBEDDING_CONFIG.md  EXECUTIVE_SUMMARY.md  QUICK_START.md  RAG_STRATEGY_GUIDE.md  SYSTEM_DESIGN_PRESENTATION.md
migrations/: env.py
migrations/versions/: 3ee40869684c_add_invitation_fields_to_student.py  54e6eeabb697_refactor_documents_for_rag_chunks.py  a1b2c3d4e5f6_add_slide_metadata_to_chunks.py  a7e80d9b3edf_add_course_metadata_for_rag_strategies.py  b2c3d4e5f6a7_add_auth_fields_to_student.py  c3d4e5f6a7b8_add_query_analytics_table.py  ce9e15d962fb_initial_schema.py
scripts/: batch_ingest_course.py  check_db.py  cleanup_docs.py  create_admin.py  create_student.py  init_qdrant.py  test_db_layer.py  test_ingestion.py  test_ingestion_api.py  test_local_embeddings.py  test_parser_chunker.py  test_priority2_features.py  test_production_features.py
src/: main.py
src/api/: deps.py
src/core/: config.py  validation.py
src/db/: models.py  qdrant.py  session.py
src/middleware/: __init__.py  cors.py  error_handling.py  logging.py  rate_limiting.py
src/services/: auth.py  chunker.py  embeddings.py  ingestion.py  learning_tools.py  pdf_parser.py  query_expansion.py  rag_strategies.py  reranking.py  retrieval.py  tts.py  tutor.py
(+67 files in other folders)
